--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+.lw { font-size: 60px; }body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@ body{
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: goldenrod;
+    background: linear-gradient(white, black);
     color: crimson;
 }
 
@@ -19,4 +19,28 @@ body{
 
 .banner{
     text-align: center;
+}
+
+.banner img{
+    max-width: 95%;
+    height: auto;
+
+}
+
+.personagens{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.personagem{
+    text-align: center;
+}
+
+.personagem img{
+    width: 159px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 7.5px;
+    box-shadow: 0 5px 10px black;
 }
